some files edited

--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
 			<ul class="icons">
 				<li><a href="https://www.linkedin.com/in/tessema-fuchere/" class="icon brands fa-linkedin"><span
 							class="label" target="_blank">Linkedin</span></a></li>
-				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+				<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 				<li><a href="https://github.com/tessema2021" class="icon brands fa-github"><span class="label"
 							target="_blank">Github</span></a></li>
-				<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-				<li><a href="ninafuchere@gmail.com" class="icon solid fa-envelope"><span class="label"
+				<li><a href="https://tessema2021.github.io/github.io/" class="icon brands fa-dribbble"><span
+							class="label">Dribbble</span></a></li>
+				<li><a href="mailto:ninafuchere@gmail.com" class="icon solid fa-envelope"><span class="label"
 							target="_blank">Email</span></a>
 				</li>
 			</ul>
@@ -75,7 +76,7 @@
 				</header>
 
 				<footer>
-					<a href="#portfolio" class="button scrolly">Scroll down</a>
+					<a href="#portfolio" class="button scrolly">See More</a>
 				</footer>
 
 			</div>
@@ -92,8 +93,12 @@
 				<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
 					egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
 					Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-					fusce hendrerit lacus ridiculus.</p>
-				<a href="file:///C:/Users/OWNER/Downloads/Resume%20(1).pdf/contact.html" class="button scrolly">View</a>
+					fusce hendrerit lacus ridiculus.
+					<br>
+					Click
+					<a href="file:///C:/Users/OWNER/Downloads/Resume%20(1).pdf/contact.html" class="resume-btn">here</a>
+					to download my resume
+				</p>
 			</div>
 		</section>
 
