--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 					<h2>Resume</h2>
 				</header>
 
-				<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-					egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-					Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-					fusce hendrerit lacus ridiculus.
+				<p>For Education and Work experience
 					<br>
 					Click
+					<!-- <a href="/images/myw3schoolsimage.jpg" download>
+						<img src="/images/myw3schoolsimage.jpg" alt="W3Schools">
+					</a> -->
 					<a href="file:///C:/Users/OWNER/Downloads/Resume%20(1).pdf/contact.html" class="resume-btn">here</a>
 					to download my resume
 				</p>
