resume link added

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 					<!-- <a href="/images/myw3schoolsimage.jpg" download>
 						<img src="/images/myw3schoolsimage.jpg" alt="W3Schools">
 					</a> -->
-					<a href="file:///C:/Users/OWNER/Downloads/Resume%20(1).pdf/contact.html" class="resume-btn">here</a>
+					<a href="https://docs.google.com/document/d/164wLTb1xcmModAe-QGbGFDpjkO-N_5W1Cw1vk6_L4EM/edit?usp=sharing"
+						class="resume-btn">here</a>
 					to download my resume
 				</p>
 			</div>
