--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-					<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Resume</span></a>
+					<li><a href="#resume" id="portfolio-link"><span class="icon solid fa-th">Resume</span></a>
 					</li>
 					<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
+					<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-user">portfolio</span></a>
+					</li>
 					<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a>
 					</li>
 				</ul>
@@ -82,8 +84,8 @@
 			</div>
 		</section>
 
-		<!-- Portfolio -->
-		<section id="portfolio" class="two">
+		<!-- resume -->
+		<section id="resume" class="two">
 			<div class="container">
 
 				<header>
@@ -111,7 +113,7 @@
 					<h2>About Me</h2>
 				</header>
 
-				<a href="#" class="image featured"><img src="images/2021.T.jpg" alt="" /></a>
+				<!-- <a href="#" class="image featured"><img src="images/2021.T.jpg" alt="" /></a> -->
 
 				<p>
 					After years of working in the health department,transportation and others I decided to take the leap
@@ -121,6 +123,57 @@
 				</p>
 
 			</div>
+		</section>
+
+		<!-- portfolio -->
+		<section id="portfolio" class="three">
+			<div class="container">
+
+				<header>
+					<h2>Portfolio</h2>
+				</header>
+
+				<div class="inner">
+					<h2>Noteable Projects</h2>
+					<p>Projects I have completed during my time in Nashville Software School.</p>
+					<div class="features">
+						<section class="project">
+							<!-- <span class="icon solid major fa-code"></span> -->
+							<h3>Medical Appointment app</h3>
+							<h5>Front-End Capstone based in the React framework</h5>
+							<p>The app is an easy to use app that allows the user
+								to make medical appointment
+								When a user logs in, they have the ability to add their child on the children section
+								and are able to make appointments on the appointment section.
+								Single Page app that has CRUD functionality
+								Data provided by fetch calls to JSON server.
+								Planning for this project required creating an
+								ERD and a wireframe. </p>
+						</section>
+						<section class="project">
+							<!-- <span class="icon solid major fa-lock"></span> -->
+							<h3>Nutshell</h3>
+							<h5>A React based group project.</h5>
+							<p>Built for users to post and view news articles,local events and message posts/private
+								messages with their added friends .we focused on creating a single page application for
+								users to access everything they need in one place. Full CRUD app utilizing React.js
+								hooks to update state and use Json server to hold data. I was responsible for the events
+								section.</p>
+						</section>
+
+						<section class="project">
+							<!-- <span class="icon solid major fa-desktop"></span> -->
+							<h3>Back-End Capatone</h3>
+							<h5>BarberShop</h5>
+							<p> Easy to use app that allows Owner/Employee of
+								the shop to track their customers.
+								Single Page app that has CRUD functionality.
+								Utilizes ASP.net,Razor,View and Sql.</p>
+						</section>
+
+					</div>
+
+				</div>
 		</section>
 
 		<!-- Contact -->
