--- a/index.html
+++ b/index.html
@@ -143,8 +143,10 @@
 							<h5>Front-End Capstone based in the React framework</h5>
 							<p>The app is an easy to use app that allows the user
 								to make medical appointment
-								When a user logs in, they have the ability to add their child on the children section
-								and are able to make appointments on the appointment section.
+								When a user logs in, they have the ability
+								to add their child on the children section
+								and are able to make appointments on the
+								appointment section.
 								Single Page app that has CRUD functionality
 								Data provided by fetch calls to JSON server.
 								Planning for this project required creating an
