--- a/index.html
+++ b/index.html
@@ -83,126 +83,134 @@
 
 			</div>
 		</section>
+		<section class="content">
+			<!-- resume -->
+			<section id="resume" class="two">
+				<div class="container">
 
-		<!-- resume -->
-		<section id="resume" class="two">
-			<div class="container">
+					<header>
+						<h2>Resume</h2>
+					</header>
 
-				<header>
-					<h2>Resume</h2>
-				</header>
-
-				<p>For Education and Work experience
-					<br>
-					Click
-					<!-- <a href="/images/myw3schoolsimage.jpg" download>
+					<p>For Education and Work experience
+						<br>
+						Click
+						<!-- <a href="/images/myw3schoolsimage.jpg" download>
 						<img src="/images/myw3schoolsimage.jpg" alt="W3Schools">
 					</a> -->
-					<a href="https://docs.google.com/document/d/164wLTb1xcmModAe-QGbGFDpjkO-N_5W1Cw1vk6_L4EM/edit?usp=sharing"
-						class="resume-btn">here</a>
-					to download my resume
-				</p>
-			</div>
-		</section>
+						<a href="https://docs.google.com/document/d/164wLTb1xcmModAe-QGbGFDpjkO-N_5W1Cw1vk6_L4EM/edit?usp=sharing"
+							class="resume-btn">here</a>
+						to download my resume
+					</p>
+				</div>
+			</section>
 
-		<!-- About Me -->
-		<section id="about" class="three">
-			<div class="container">
+			<!-- About Me -->
+			<section id="about" class="three">
+				<div class="container">
 
-				<header>
-					<h2>About Me</h2>
-				</header>
+					<header>
+						<h2>About Me</h2>
+					</header>
 
-				<!-- <a href="#" class="image featured"><img src="images/2021.T.jpg" alt="" /></a> -->
+					<!-- <a href="#" class="image featured"><img src="images/2021.T.jpg" alt="" /></a> -->
 
-				<p>
-					After years of working in the health department,transportation and others I decided to take the leap
-					into a new career path.I have always had a knack for figuring out how things work and using that
-					knowledge to find new ways to solve problems.Software development was the perfect direction for me
-					to go with my problem solving abilities.
-				</p>
-
-			</div>
-		</section>
-
-		<!-- portfolio -->
-		<section id="portfolio" class="three">
-			<div class="container">
-
-				<header>
-					<h2>Portfolio</h2>
-				</header>
-
-				<div class="inner">
-					<h2>Noteable Projects</h2>
-					<p>Projects I have completed during my time in Nashville Software School.</p>
-					<div class="features">
-						<section class="project">
-							<!-- <span class="icon solid major fa-code"></span> -->
-							<h3>Medical Appointment app</h3>
-							<h5>Front-End Capstone based in the React framework</h5>
-							<p>The app is an easy to use app that allows the user
-								to make medical appointment
-								When a user logs in, they have the ability
-								to add their child on the children section
-								and are able to make appointments on the
-								appointment section.
-								Single Page app that has CRUD functionality
-								Data provided by fetch calls to JSON server.
-								Planning for this project required creating an
-								ERD and a wireframe. </p>
-						</section>
-						<section class="project">
-							<!-- <span class="icon solid major fa-lock"></span> -->
-							<h3>Nutshell</h3>
-							<h5>A React based group project.</h5>
-							<p>Built for users to post and view news articles,local events and message posts/private
-								messages with their added friends .we focused on creating a single page application for
-								users to access everything they need in one place. Full CRUD app utilizing React.js
-								hooks to update state and use Json server to hold data. I was responsible for the events
-								section.</p>
-						</section>
-
-						<section class="project">
-							<!-- <span class="icon solid major fa-desktop"></span> -->
-							<h3>Back-End Capatone</h3>
-							<h5>BarberShop</h5>
-							<p> Easy to use app that allows Owner/Employee of
-								the shop to track their customers.
-								Single Page app that has CRUD functionality.
-								Utilizes ASP.net,Razor,View and Sql.</p>
-						</section>
-
-					</div>
+					<p>
+						After years of working in the health department,transportation and others I decided to take the
+						leap
+						into a new career path.I have always had a knack for figuring out how things work and using that
+						knowledge to find new ways to solve problems.Software development was the perfect direction for
+						me
+						to go with my problem solving abilities.
+					</p>
 
 				</div>
-		</section>
+			</section>
 
-		<!-- Contact -->
-		<section id="contact" class="four">
-			<div class="container">
+			<!-- portfolio -->
+			<section id="portfolio" class="three">
 
-				<header>
-					<h2>Contact</h2>
-				</header>
+				<div class="container">
 
-				<p>If you have some Questions or need Help! Please Contact Me!
-					I will respond to you as soon as possible.</p>
+					<header>
+						<h2>Portfolio</h2>
+					</header>
 
-				<form method="post" action="#">
-					<div class="row">
-						<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-						<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-						<div class="col-12">
-							<textarea name="message" placeholder="Message"></textarea>
+					<div class="inner">
+						<h2>Noteable Projects</h2>
+						<p>Projects I have completed during my time in Nashville Software School.</p>
+						<div class="features">
+							<section class="project">
+								<!-- <span class="icon solid major fa-code"></span> -->
+								<h3>Medical Appointment app</h3>
+								<h5>Front-End Capstone based in the React framework</h5>
+								<p>The app is an easy to use app that allows the user
+									to make medical appointment
+									When a user logs in, they have the ability
+									to add their child on the children section
+									and are able to make appointments on the
+									appointment section.
+									Single Page app that has CRUD functionality
+									Data provided by fetch calls to JSON server.
+									Planning for this project required creating an
+									ERD and a wireframe. </p>
+							</section>
+							<section class="project">
+								<!-- <span class="icon solid major fa-lock"></span> -->
+								<h3>Nutshell</h3>
+								<h5>A React based group project.</h5>
+								<p>Built for users to post and view news articles,local events and message posts/private
+									messages with their added friends .we focused on creating a single page application
+									for
+									users to access everything they need in one place. Full CRUD app utilizing React.js
+									hooks to update state and use Json server to hold data. I was responsible for the
+									events
+									section.</p>
+							</section>
+
+							<section class="project">
+								<!-- <span class="icon solid major fa-desktop"></span> -->
+								<h3>Back-End Capatone</h3>
+								<h5>BarberShop</h5>
+								<p> Easy to use app that allows Owner/Employee of the shop to track their
+									customers.Single Page app that has CRUD functionality.Utilizes ASP.net,Razor,View,C#
+									and Sql.</p>
+
+							</section>
+
 						</div>
-						<div class="col-12">
-							<input type="submit" value="Send Message" />
-						</div>
+
 					</div>
-				</form>
 
-			</div>
+			</section>
+
+			<!-- Contact -->
+			<section id="contact" class="four">
+				<div class="container">
+
+					<header>
+						<h2>Contact</h2>
+					</header>
+
+					<p>If you have some Questions or need Help! Please Contact Me!
+						I will respond to you as soon as possible.</p>
+
+					<form method="post" action="#">
+						<div class="row">
+							<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
+							<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" />
+							</div>
+							<div class="col-12">
+								<textarea name="message" placeholder="Message"></textarea>
+							</div>
+							<div class="col-12">
+								<input type="submit" value="Send Message" />
+							</div>
+						</div>
+					</form>
+
+				</div>
+			</section>
 		</section>
 
 	</div>
