skils section added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 					<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 					<li><a href="#resume" id="portfolio-link"><span class="icon solid fa-th">Resume</span></a>
 					</li>
+					<li><a href="#work" id="portfolio-link"><span class="icon solid fa-th">Skills</span></a>
+					</li>
 					<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 					<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-user">portfolio</span></a>
 					</li>
@@ -81,6 +83,93 @@
 					<a href="#portfolio" class="button scrolly">See More</a>
 				</footer>
 
+			</div>
+		</section>
+		<section id="work" class="wrapper style2">
+			<div class="container">
+				<header>
+					<h2>Skills</h2>
+					<p></p>
+				</header>
+				<div class="row aln-center">
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/html-5.svg" alt="jss" />
+					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/css-3.svg" alt="jss">
+					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/javascript.svg" alt="jss">
+					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/react.svg" alt="jss">
+					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/nodejs-icon.svg" alt="jss">
+					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/git-icon.svg" alt="jss">
+					</div>
+
+
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/json.svg" alt="jss">
+					</div>
+
+
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/postman-icon.svg" alt="jss">
+					</div>
+
+
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/figma.svg" alt="jss">
+					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/Csharp.png" alt="jss">
+					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/dotnet.svg" alt="jss">
+					</div>
+
+
+
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/visual-studio-code.svg" alt="jss">
+					</div>
+
+
+					<!-- <div class="col-4 col-6-medium col-12-small">
+						<img src="/images/image-skills/microsoft-sql-server-logo-96AF49E2B3-seeklogo.com.svg" alt="">
+					</div> -->
+
+
+
+					<!-- 
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/npm.svg" alt="jss">
+					</div> -->
+
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/github-icon.svg" alt="jss">
+					</div>
+
+					<div class="col-4 col-6-medium col-12-small">
+						<img src="images/visual-studio.svg" alt="jss">
+					</div>
+
+
+
+				</div>
+				<footer>
+					<p></p>
+					<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+				</footer>
 			</div>
 		</section>
 		<section class="content">
